--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,11 +60,11 @@
         "*.asset": "yaml",
         "*.meta": "yaml",
         "*.prefab": "yaml",
-        "*.unity": "yaml",
+        "*.unity": "yaml"
     },
     "explorer.fileNesting.enabled": true,
     "explorer.fileNesting.patterns": {
-        "*.sln": "*.csproj",
+        "*.sln": "*.csproj"
     },
-    "dotnet.defaultSolution": "Snow Surfer.sln"
+    "dotnet.defaultSolution": "Snow-Surfer-2D-Unity6.sln"
 }
